--- a/README
+++ b/README
@@ -3,6 +3,8 @@
 USINT Related Scripts
 #######################
 
+As of Oct 23rd, This Usint repository is now archived, and any relevant supplemental scripts supporting Usint communication is now stored in the Ocat_Flask_App/other_scripts repository.
+
 ==============
 PYTHON Scripts
 ==============
